fixing resposive of dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,10 @@ header .container {
   font-weight: 700;
   font-size: 18px;
 }
+.dark-mode {
+  position: static;
+  z-index: 9999;
+}
 .switch-1 input {
   opacity: 0;
   width: 0;
@@ -182,8 +186,19 @@ header .container {
   .navbar ul {
     display: none;
   }
+  .dark-mode {
+    width: 45px;
+    height: 50px;
+  }
   .social-icons {
     display: none;
+  }
+}
+@media (max-width: 480px) {
+  .dark-mode {
+    top: 100px;
+    width: 40px;
+    height: 50px;
   }
 }
 
